RESOLVED FIXED40421
REGRESSION: GMail becomes blank after closing other tabs
https://bugs.webkit.org/show_bug.cgi?id=40421
Summary REGRESSION: GMail becomes blank after closing other tabs
Ismail Donmez
Reported 2010-06-10 05:33:58 PDT
How to reproduce; - Open GMail in one tab - Open another tab and visit your favourite news site - Open another tabs and visit just another site - Close two tabs Expected results: - GMai is shown as usual What happens instead: - GMail tab is blank Note 1: Safari 4/5 does not have this problem, only WebKit Note 2: Disabling Flash plugin fixes the issue
Attachments
Patch (6.34 KB, patch)
2010-07-06 22:45 PDT, Simon Fraser (smfr)
mitz: review+
Alexey Proskuryakov
Comment 1 2010-06-10 11:16:10 PDT
I cannot reproduce this with r60936 on Mac OS X 10.5.8 and Flash 10.0 r42 installed.
Ismail Donmez
Comment 2 2010-06-10 11:18:14 PDT
(In reply to comment #1) > I cannot reproduce this with r60936 on Mac OS X 10.5.8 and Flash 10.0 r42 installed. Would you mind trying with Flash 10.1 rc7? I am on OSX 10.6.3 fwiw.
Ismail Donmez
Comment 3 2010-06-10 14:11:28 PDT
Looks like Adobe just released Flash Plugin 10.1 as stable and bug is reproducible with it.
Ismail Donmez
Comment 4 2010-06-10 14:34:30 PDT
Problem doesn't seem to reproducible with Flash plugin 10.0 r45, so the problem lies in the 10.1 update.
Simon Fraser (smfr)
Comment 5 2010-06-10 15:13:55 PDT
Alexey Proskuryakov
Comment 6 2010-06-11 14:33:45 PDT
I could reproduce this on Mac OS X 10.6 with nightly r60968 and Flash 10.1. I could not reproduce under the same configuration with accelerated compositing disabled. Doesn't seem to happen with shipping Safari/WebKit 5 indeed.
Simon Fraser (smfr)
Comment 7 2010-07-06 22:35:52 PDT
*** Bug 41738 has been marked as a duplicate of this bug. ***
Simon Fraser (smfr)
Comment 8 2010-07-06 22:45:32 PDT
mitz
Comment 9 2010-07-06 22:56:20 PDT
Comment on attachment 60683 [details] Patch WebCore/ChangeLog:16 + are suspended (indicating that we'reinside recalcStyle()). Typo: we'reinside I would have added a public setNeedsStyleRecalcSoon() method to HTMLFrameOwnerElement and not exposed ContainerNode::queuePostAttachCallBack(). r=me
Simon Fraser (smfr)
Comment 10 2010-07-07 12:28:44 PDT
Ismail Donmez
Comment 11 2010-07-09 05:00:55 PDT
The original bug is fixed but there is still a one time flicker when switching to GMail tab, which is a regression compared to Safari 5.
Simon Fraser (smfr)
Comment 12 2010-07-09 08:46:39 PDT
The flicker is a tiled layer issue. I'm working on fixing that via bug 34009.
Simon Fraser (smfr)
Comment 13 2010-07-09 12:49:03 PDT
*** Bug 41881 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.