WebCore/dom/ContainerNode.h
@@ -76,10 +76,12 @@ public:
     
     bool dispatchBeforeLoadEvent(const String& sourceURL);
 
+    static void queuePostAttachCallback(NodeCallback, Node*);
+    static bool postAttachCallbacksAreSuspended();
+    
 protected:
     ContainerNode(Document*, ConstructionType = CreateContainer);
 
-    static void queuePostAttachCallback(NodeCallback, Node*);
     void suspendPostAttachCallbacks();
     void resumePostAttachCallbacks();
 
