third_party/WebKit/WebCore/rendering/RenderLayerCompositor.h
@@ -202,6 +202,7 @@ private:
     
     void rootLayerAttachmentChanged();
     
+    void scheduleNeedsStyleRecalc(Element*);
     void notifyIFramesOfCompositingChange();
 
     // Whether a running transition or animation enforces the need for a compositing layer.
